--- a/projects/topomojo-work/src/app/challenge-editor/variant-form/variant-form.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/variant-form/variant-form.component.html
@@ -3,82 +3,177 @@
 
 <div [formGroup]="form">
 
+  <div class="mb-2">
+    <div class="text-muted">
+      A variant is a different version of the challenge. You can provide variant-specific Markdown, attach an ISO to
+      selected templates, and define one or more question sets. One variant is chosen randomly at deploy time.
+    </div>
+  </div>
+
   <div class="indent" [hidden]="!detail">
-    <label class="col-form-label-sm">Markdown</label>
-    <ngx-monaco-editor id="variant-{{index}}-editor" formControlName="text" [options]="editorOptions"
-      aria-label="challenge text"></ngx-monaco-editor>
-    <small>Provide any information specific to this variant. This is appended to the challenge text.</small>
+    <label class="col-form-label-sm d-flex align-items-center mb-0">
+      Markdown
+    </label>
+
+    <ngx-monaco-editor
+      id="variant-{{index}}-editor"
+      formControlName="text"
+      [options]="editorOptions"
+      aria-label="challenge text"
+    ></ngx-monaco-editor>
+
+    <small class="text-muted">
+      Provide any information specific to this variant. This is appended to the challenge text.
+    </small>
   </div>
 
   <div formGroupName="iso" class="indent mb-2 pb-2" [hidden]="!detail">
-    <label class="label pop-info">Iso</label>
-    <div class="">
-      <small>
-        Dynamic iso attachment provides the ability to attach a variant-specific ISO file to templates.
-        Specify targets as a space-delimited list of template names.
+    <label class="label pop-info d-flex align-items-center mb-0">
+      ISO
+    </label>
+
+    <div>
+      <small class="text-muted">
+        Dynamic ISO attachment lets you attach a variant-specific ISO file to templates. Specify targets as a
+        space-delimited list of template names.
       </small>
     </div>
+
     <div class="form-group py-0">
-      <label class="col-form-label-sm">File</label>
+      <label class="col-form-label-sm d-flex align-items-center mb-0">
+        File
+      </label>
+
       <div class="input-group input-group-sm mb-1">
         <input type="hidden" class="form-control" formControlName="file">
-        <label id="iso-input-{{index}}" class="form-control"
-          readonly>{{form.get('iso.file')?.value?.split('/').pop()}}</label>
-        <!-- <label id="iso-input" class="form-control">{{form.get('iso.file')?.value?.split('/').pop()}}</label> -->
+        <label
+          id="iso-input-{{index}}"
+          class="form-control"
+          readonly
+        >{{form.get('iso.file')?.value?.split('/').pop()}}</label>
+
         <div class="input-group-append">
-          <button class="btn btn-sm btn-outline-info" (click)="isoClear()">
+          <button
+            class="btn btn-sm btn-outline-info"
+            (click)="isoClear()"
+            placement="right"
+            container="body"
+            triggers="hover focus"
+            [tooltip]="'Remove the currently selected ISO from this variant.'"
+            aria-label="Remove the currently selected ISO from this variant."
+          >
             <fa-icon [icon]="faTimes"></fa-icon>
             <span>Remove</span>
           </button>
         </div>
       </div>
+
       <app-iso-selector [guid]="guid" (added)="isoSelect($event)"></app-iso-selector>
     </div>
+
     <div class="form-group py-0">
-      <label class="col-form-label-sm">Targets</label>
+      <label class="col-form-label-sm d-flex align-items-center mb-0">
+        Targets
+      </label>
+
       <input class="form-control" formControlName="targets" placeholder="vm targets" aria-label="vm target list">
-      <small>space delimited list of template names that should attach this iso</small>
+
+      <small class="text-muted">
+        Enter template names separated by spaces. Only those templates will attach this ISO.
+      </small>
     </div>
+
     <div class="form-group py-0">
-      <label class="mb-0" for="downloadable-toggle-{{index}}">Downloadable</label>
+      <label class="mb-0 d-flex align-items-center" for="downloadable-toggle-{{index}}">
+        Downloadable
+      </label>
+
       <div class="form-control auto-h d-flex align-items-center">
-        <label>Restricted</label>
-        <label id="downloadable-toggle-{{index}}" class="btn text-info" btnCheckbox formControlName="downloadable">
+        <label class="mb-0">Restricted</label>
+        <label
+          id="downloadable-toggle-{{index}}"
+          class="btn text-info"
+          btnCheckbox
+          formControlName="downloadable"
+          aria-label="toggle iso downloadable"
+        >
           <fa-icon [icon]="form.get('iso.downloadable')?.value ? faToggleOn : faToggleOff" size="lg"></fa-icon>
         </label>
-        <label>Downloadable</label>
+        <label class="mb-0">Downloadable</label>
       </div>
+
+      <small class="text-muted">
+        Toggle to allow players to download the ISO (only use this when it’s intended to be distributed).
+      </small>
     </div>
   </div>
 
   <ng-container formArrayName="sections">
+    <div class="indent mb-2">
+      <div class="text-muted">
+        Use question sets to group questions (and optionally gate progression with prerequisites). Each question includes a
+        prompt and an expected answer; in Detail you can also set visibility, grading, weight, and an example.
+      </div>
+    </div>
+
     <div *ngFor="let qs of sections.controls; let i = index" [formGroupName]="i" class="indent mb-2 pb-2">
 
       <div class="d-flex align-items-center">
-        <input type="text" class="form-control question-set-name-input flex-grow-1" formControlName="name"
-          placeholder="Question Set {{i+1}}" maxlength="100">
+        <input
+          type="text"
+          class="form-control question-set-name-input flex-grow-1"
+          formControlName="name"
+          placeholder="Question Set {{i+1}}"
+          maxlength="100"
+          aria-label="question set name"
+          placement="right"
+          container="body"
+          triggers="hover focus"
+          [tooltip]="'Name this question set (useful for progressive challenges or grouped tasks).'"
+        >
 
         <div class="btn-group mr-2" role="group" aria-label="Variant buttons">
-          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Move this set up"
-            [disabled]="i == 0" (click)="updateSectionIndex(i, -1)">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-dark variant-control-buttons"
+            tooltip="Move this set up"
+            [disabled]="i == 0"
+            (click)="updateSectionIndex(i, -1)"
+          >
             <fa-icon [icon]="faArrowUp"></fa-icon>
           </button>
 
-          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Move this set down"
-            [disabled]="i == sections.length - 1" (click)="updateSectionIndex(i, 1)">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-dark variant-control-buttons"
+            tooltip="Move this set down"
+            [disabled]="i == sections.length - 1"
+            (click)="updateSectionIndex(i, 1)"
+          >
             <fa-icon [icon]="faArrowDown"></fa-icon>
           </button>
 
-          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons"
-            tooltip="Show details for this set" btnCheckbox [(ngModel)]="more[i]" [ngModelOptions]="{standalone: true}">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-dark variant-control-buttons"
+            tooltip="Show details for this set"
+            btnCheckbox
+            [(ngModel)]="more[i]"
+            [ngModelOptions]="{standalone: true}"
+          >
             <fa-icon [icon]="faMore"></fa-icon>
           </button>
 
-          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Clone this set"
-            (click)="addSet(qs.value)">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-dark variant-control-buttons"
+            tooltip="Clone this set"
+            (click)="addSet(qs.value)"
+          >
             <fa-icon [icon]="faClone"></fa-icon>
           </button>
         </div>
+
         <div class="btn-group mr-2" role="group" aria-label="Variant buttons (remove)">
           <app-confirm-button btnClass="btn btn-sm btn-outline-dark mx-1" (confirm)="removeSet(i)">
             <fa-icon [icon]="faTrash"></fa-icon>
@@ -88,18 +183,33 @@
       </div>
 
       <div [hidden]="!detail && !more[i]">
-        <label class="col-form-label-sm">Markdown</label>
-        <ngx-monaco-editor id="section-{{this.index}}.{{i}}-editor" formControlName="text" [options]="editorOptions"
-          aria-label="section text"></ngx-monaco-editor>
-        <small>Provide any instructions specific to this question set.</small>
+        <label class="col-form-label-sm d-flex align-items-center mb-0">
+          Markdown
+        </label>
+
+        <ngx-monaco-editor
+          id="section-{{this.index}}.{{i}}-editor"
+          formControlName="text"
+          [options]="editorOptions"
+          aria-label="section text"
+        ></ngx-monaco-editor>
+
+        <small class="text-muted">Provide any instructions specific to this question set.</small>
       </div>
 
-      <app-question-form [form]="$any(qs)" [vindex]="this.index" [index]="i"
-        [more]="detail || more[i]"></app-question-form>
+      <app-question-form
+        [form]="$any(qs)"
+        [vindex]="this.index"
+        [index]="i"
+        [more]="detail || more[i]"
+      ></app-question-form>
     </div>
   </ng-container>
 
-  <button class="btn btn-sm btn-outline-secondary" (click)="addSet()">
+  <button
+    class="btn btn-sm btn-outline-secondary"
+    (click)="addSet()"
+  >
     <fa-icon [icon]="faPlus"></fa-icon>
     <span>Add Question Set</span>
   </button>
